--- a/styles/main.css
+++ b/styles/main.css
@@ -30,51 +30,54 @@ body {
   background-color: #FdFdFd;
   font-family: 'Quicksand', sans-serif;
   font-weight: normal;
-  line-height: 30px;
+  font-size: 20px;
+  line-height: 28px;
+  font-weight: 500;
 }
 
 h1 {
   font-family: 'circular std', sans-serif;
   min-height: 100%;
   font-size: 64px;
-  line-height: 81px;
+  line-height: 89.6px;
   margin: 0;
-  font-weight: bold;
+  font-weight: 500;
 }
 
 h2 {
   font-family: "circular std", sans-serif;
   font-weight: 300;
   font-size: 48px;
-  line-height: 61px;
+  line-height: 67.2px;
   letter-spacing: 1.55px;
   min-height: 100%;
   margin: 0;
 }
 
 h3 {
-  font-family: "circular std", sans-serif;
-  font-size: 36px;
-  line-height: 46px;
-  min-height: 100%;
-  font-weight: normal;
-  font-style: italic;
+  font-family: "quicksand", sans-serif;
+  font-size: 30px;
+  line-height: 50.4px;
+  /* min-height: 100%; */
+  font-weight: 400;
   margin: 0;
+  text-transform: uppercase;
 }
 
 h4 {
   font-family: "circular std", sans-serif;
   font-weight: 700;
   font-size: 20px;
-  line-height: 25px;
-  margin-bottom: 0;
+  line-height: 28px;
+  margin: 0;
+  letter-spacing: 1.1px;
 }
 
 p {
-  font-family: "quicksand";
+  font-family: "quicksand", sans-serif;
   font-size: 20px;
-  line-height: 27px;
-  font-weight: 400;
+  line-height: 28px;
+  font-weight: 500;
 }
 
 a {
@@ -112,7 +115,7 @@ button {
   padding: 10px;
   border-style: solid;
   border-radius: 30px;
-  font-size: 16px;
+  font-size: 20px;
   border-width: 1px;
   border-color: #333333;
 }
@@ -246,6 +249,7 @@ nav li a {
   text-decoration: none;
   color: #2f2f2f;
   box-shadow: none;
+  font-weight: 100;
 }
 
 nav li a:hover {
