--- a/styles/rfs.css
+++ b/styles/rfs.css
@@ -385,6 +385,11 @@ h2 {
   width: 35%;
 }
 
+#width {
+  width: 80%;
+  margin:0 auto;
+}
+
 .style-guide {
   background: #e0c8d7;
   padding: 3rem;
@@ -564,6 +569,10 @@ ul.launch {
     width: 15%;
   }
 
+  .persona img.first, .persona img.second {
+    width: 48%;
+  }
+
   .environment p {
     font-size: 16px;
     line-height: 20px;
@@ -647,14 +656,17 @@ ul.launch {
     width: 100%;
   }
 
-  video {
-    width: 300px;
-    height: 157.5px;
+  #width {
+    width: 100%;
   }
 
   #quote {
     font-size: 20px;
     line-height: 32px;
+  }
+
+  iframe {
+    width: 100%;
   }
 }
 
