--- a/styles/case-study.css
+++ b/styles/case-study.css
@@ -2,11 +2,22 @@ header {
   padding-bottom: 0;
 }
 
+.header {
+  padding: 5rem 0;
+  margin: 0 auto;
+  text-align: center;
+}
 
 .hero-text {
   padding: 5rem 0;
   width: 65%;
   margin: 0 auto;
+}
+
+
+
+h1, h2 {
+  text-align: center;
 }
 
 h3 {
