updated mobile for rfs case study; added spacing under coop case study under prototype section

--- a/styles/main.css
+++ b/styles/main.css
@@ -4,8 +4,6 @@
      box-sizing: border-box;
  }
 
-
-
 html {
   font-size: 100%;
 }
@@ -433,7 +431,7 @@ nav li a:hover {
  }
 
  /*other*/
-  #container {
+  .part {
     padding: 3rem 0;
   }
 
