Updated homepage hero and about page hero

--- a/styles/about.css
+++ b/styles/about.css
@@ -53,9 +53,9 @@ h4 {
   margin-top: 0;
 }
 
-.intro-me img {
+.intro img {
   border-style: solid;
-  border-color: white;
+  border-color: black;
   border-radius: 360px;
 }
 
