--- a/styles/main.css
+++ b/styles/main.css
@@ -35,7 +35,7 @@ b {
 
 body {
   background-color: #FdFdFd;
-  font-family: 'Quicksand', sans-serif;
+  font-family: 'Circular std', sans-serif;
   font-size: 20px;
   line-height: 28px;
   font-weight: 100;
@@ -72,6 +72,15 @@ h3 {
 h4 {
   font-family: "circular std", sans-serif;
   font-weight: 700;
+  font-size: 20px;
+  line-height: 28px;
+  margin: 0;
+  letter-spacing: 1.1px;
+}
+
+h5 {
+  font-family: "circular std", sans-serif;
+  font-weight: 300;
   font-size: 20px;
   line-height: 28px;
   margin: 0;
