--- a/styles/case-study.css
+++ b/styles/case-study.css
@@ -24,6 +24,14 @@ h3 {
   color: #59334B;
 }
 
+.part {
+  padding-bottom: 5rem;
+  padding-top: 5rem;
+}
+
+.section {
+  padding-bottom: 3rem;
+}
 
 /* images */
 .second {
@@ -98,7 +106,6 @@ h3 {
   background: linear-gradient(112deg, rgba(229,58,32,1) 0%, rgba(212,176,140,1) 38%,
   rgba(172,216,217,1) 100%);*/
 }
-
 
 #contact {
   padding: 3rem 0;
