--- a/styles/landing.css
+++ b/styles/landing.css
@@ -1,30 +1,24 @@
-nav li a:hover {
-  box-shadow: 0px 3px #6654f152;
-}
 
 #container {
   width: 90%;
 }
 
-/* home-hero*/
+p {
+  margin-top: 0;
+}
+
+/* hero*/
+nav li a:hover {
+  color: #751B4F;
+  font-weight: bold;
+}
 
 .hero {
   padding: 5rem 0;
 }
 
-.home-hero {
-  width: 100%;
-  margin: 0 auto;
-  padding: 0 0 5rem;
-  color: #2f2f2f;
-}
-
-.hero h1 {
-  width: 80%;
-}
-
-.hero button {
-  margin-top: 1rem;
+.hero a {
+  color: white;
 }
 
 #intro {
@@ -32,7 +26,16 @@ nav li a:hover {
   float: left;
 }
 
+.hero p {
+  line-height:40px;
+}
+
 /* project list */
+.section a {
+  color: #751B4F;
+  text-decoration: underline;
+}
+
 #projects {
   clear: both;
   width: 100%;
@@ -44,7 +47,7 @@ nav li a:hover {
   font-weight: bold;
 }
 
-#color::after {
+/*#color::after {
   content: "";
   display: block;
   height: 3px;
@@ -52,11 +55,7 @@ nav li a:hover {
   background: linear-gradient(-225deg, #69EACB 0%, #EACCF8 48%, #6654F1 100%);
   margin-top: -5px;
   margin-left: 0px;
-}
-
-p {
-  margin-top: 0;
-}
+}*/
 
 .section {
   padding-bottom: 5rem;
@@ -96,12 +95,20 @@ p {
     width: 80%;
   }
 
+  button {
+    display: none;
+  }
+
   #intro {
     width: 100%;
   }
 
   .hero, #projects {
     padding: 3rem 0;
+  }
+
+  .hero p {
+    line-height: normal;
   }
 
   .projects {
