--- a/styles/main.css
+++ b/styles/main.css
@@ -9,13 +9,19 @@ html {
 }
 
 header {
-  background-image: linear-gradient(-225deg, #69EACB 0%, #EACCF8 40%, #EACCF8 49%, #6654F1 100%);
+  background-color: #124B41;
+  /*  background-image: linear-gradient(-225deg, #69EACB 0%, #EACCF8 40%, #EACCF8 49%, #6654F1 100%)*/;
   width: 100%;
+  color: white;
 }
 
 .hero {
   width: 100%;
   margin: auto;
+}
+
+nav a {
+  color: white;
 }
 
 #container {
@@ -35,26 +41,27 @@ b {
 
 body {
   background-color: #FdFdFd;
-  font-family: 'Circular std', sans-serif;
-  font-size: 18px;
-  line-height: 23px;
-  font-weight: 100;
+  font-family: 'Poppins', sans-serif;
+  font-size: 16px;
+  line-height: 30px;
+  font-weight: 400;
 }
 
 h1 {
-  font-family: 'circular std', sans-serif;
+  font-family: 'Playfair Display', serif;
   min-height: 100%;
-  font-size: 64px;
-  line-height: 72.6px;
+  font-size: 46px;
+  line-height: 60px;
   margin: 0;
-  font-weight: 500;
+  font-weight: 700;
+  font-style: italic;
 }
 
 h2 {
-  font-family: "circular std", sans-serif;
-  font-weight: 300;
-  font-size: 48px;
-  line-height: 67.2px;
+  font-family: 'Poppins', sans-serif;
+  font-weight: 400;
+  font-size: 30px;
+  line-height: 43px;
   min-height: 100%;
   margin: 0;
 }
@@ -96,8 +103,8 @@ h5 {
 }
 
 a {
-  color: #1f1f1f;
-  text-decoration: none;
+  color: #751B4F;
+  text-decoration: underline;
 }
 
 a:hover {
@@ -145,7 +152,7 @@ button:hover {
   clear: both;
   width: 50%;
   padding: 3rem;
-  background-color: #eaccf8;
+  background-color: #F5BD44;
 }
 
 .contact-text {
@@ -353,9 +360,14 @@ nav li a:hover {
   }
 
   h1 {
-  font-size: 42px;
+  font-size: 35px;
   line-height: 40px;
   letter-spacing: 2px;
+  padding-bottom: 1rem;
+  }
+
+  h2 {
+    font-size: 18px;
   }
 
   p, body {
@@ -412,7 +424,7 @@ nav li a:hover {
     z-index: 1;
     right: 0;
     top: 0;
-    background-color: #eaccf8;
+    background-color: white;
     transition: .3s;
     margin-top: 0;
   }
