--- a/styles/landing.css
+++ b/styles/landing.css
@@ -1,6 +1,6 @@
 
 #container {
-  width: 90%;
+  width: 100%;
 }
 
 p {
@@ -8,17 +8,15 @@ p {
 }
 
 /* hero*/
-nav li a {
-  color: white;
-}
+
 
 nav li a:hover {
-  color: #751B4F;
+  color: #E44B4B;
   font-weight: bold;
 }
 
 .hero {
-  padding: 20vh 40px;
+  padding: 20vh 0px;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
@@ -32,6 +30,10 @@ nav li a:hover {
   color: white;
 }
 
+.hero-text {
+  padding: 5rem;
+}
+
 #intro {
   width: 50%;
   float: left;
@@ -43,7 +45,6 @@ nav li a:hover {
 
 /* project list */
 .section a {
-  color: #751B4F;
   text-decoration: underline;
 }
 
@@ -69,11 +70,16 @@ nav li a:hover {
 }*/
 
 .section {
-  padding-bottom: 5rem;
+  padding: 5rem;
+}
+
+img {
+  -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
+  filter: grayscale(100%);
 }
 
 .project-1 img {
-  box-shadow: 2px 0px 4px 0px #e6dfdf;
+  box-shadow: 1px 1px 3px 1px rgba(0, 0, 0, 0.2);
   width: 100%;
 }
 
@@ -125,6 +131,10 @@ nav li a:hover {
     line-height: normal;
   }
 
+  .hero-text {
+    padding: 3rem;
+  }
+
   .projects {
     width: 100%;
     display: block;
@@ -144,6 +154,12 @@ nav li a:hover {
   }
 
   .section {
-    padding-bottom: 3rem;
+    padding: 3rem;
+  }
+
+  #contact h2 {
+    font-size: 18px;
+    line-height: 25px;
+    padding: 3rem;
   }
 }
