--- a/styles/main.css
+++ b/styles/main.css
@@ -9,10 +9,10 @@ html {
 }
 
 header {
-  background-color: #124B41;
+  background-color: white;
   /*  background-image: linear-gradient(-225deg, #69EACB 0%, #EACCF8 40%, #EACCF8 49%, #6654F1 100%)*/;
   width: 100%;
-  color: white;
+  color: black;
 }
 
 .hero {
@@ -21,7 +21,7 @@ header {
 }
 
 nav a {
-  color: white;
+  color: black;
 }
 
 #container {
@@ -33,6 +33,10 @@ nav a {
   padding-bottom: 3rem;
 }
 
+/*color*/
+r {
+  color: #E44B4B;
+}
 
 /*typograohy*/
 b {
@@ -43,7 +47,7 @@ body {
   background-color: #FdFdFd;
   font-family: 'Poppins', sans-serif;
   font-size: 16px;
-  line-height: 30px;
+  line-height: 27px;
   font-weight: 400;
 }
 
@@ -59,7 +63,7 @@ h1 {
 
 h2 {
   font-family: 'Poppins', sans-serif;
-  font-weight: 400;
+  font-weight: 300;
   font-size: 30px;
   line-height: 43px;
   min-height: 100%;
@@ -103,8 +107,8 @@ h5 {
 }
 
 a {
-  color: #751B4F;
   text-decoration: underline;
+  color: inherit;
 }
 
 a:hover {
@@ -137,7 +141,8 @@ button {
   border-radius: 30px;
   font-size: 16px;
   border-width: 1px;
-  border-color: #333333;
+  border-color: inherit;
+  color: inherit;
 }
 
 button:hover {
@@ -152,7 +157,8 @@ button:hover {
   clear: both;
   width: 50%;
   padding: 3rem;
-  background-color: #F5BD44;
+  background-color: #E44B4B;
+  color: white;
 }
 
 .contact-text {
