--- a/styles/home.css
+++ b/styles/home.css
@@ -27,7 +27,6 @@ section {
   margin-top: 5rem;
   margin-bottom: 5rem;
   clear: both;
-  overflow: auto;
 }
 
 .same-line {
@@ -125,11 +124,10 @@ ul#topnav.nav-bar {
   float: right;
   padding: 0;
   margin: 30px 0;
-  display: -webkit-inline-box;
 }
 
 nav li {
-  display: block;
+  display: inline-block;
   height: 100%;
   padding-right: 50px;
 }
@@ -139,8 +137,8 @@ nav li {
 .projects {
   color: white;
   clear: both;
-  position: relative;
-  z-index: -1;
+  /*position: relative;
+  z-index: -1;*/
 }
 
 a {
@@ -369,6 +367,13 @@ footer {
     padding-top: 5rem 0 3rem;
   }
 
+  ul#topnav.nav-bar {
+    float: right;
+    padding: 0;
+    margin: 30px 0;
+    display: inline-grid;
+  }
+
   nav.hamburger a:not(:first-child) {
     display: none;
   }
@@ -378,6 +383,7 @@ footer {
     display: block;
     margin-right: 2rem;
     box-shadow: none;
+    color: #121360;
   }
 
   .nav-bar.responsive {
@@ -398,7 +404,6 @@ footer {
 
   .nav-bar.responsive a:hover {
     cursor: pointer;
-    padding-bottom: 3rem;
   }
 
   .nav-bar.responsive a.hamburger {
@@ -411,8 +416,8 @@ footer {
     box-shadow: none;
     display: block;
     text-align: center;
-    font-size: 45px;
-    line-height: 55px;
+    font-size: 28px;
+    color: white;
  }
 
  /* Header*/
@@ -436,6 +441,10 @@ footer {
     display: none;
   }
 
+  section {
+    overflow: auto;
+  }
+
   header h3 {
     font-size: 16pt;
   }
@@ -445,6 +454,10 @@ footer {
     background-size: 100%;
     background-position: center;
     background-repeat: repeat;
+    background-position-y: 55px;
+  }
+
+  .contact {
     background-position-y: 25px;
   }
 
